--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
 					<div class="contact">
-						<form class="form" name="enq" method="post" action="thank-you.html" onsubmit="return validation();">
+						<form class="form" name="enq" method="post" action="/api/submitForm.js" onsubmit="return validation();">
 							<div class="row">
 								<div class="form-group col-md-6">
 									<input type="text" name="name" class="form-control" placeholder="Nombre" required="required">
